--- a/src/sass/blocks/tab.scss
+++ b/src/sass/blocks/tab.scss
@@ -28,5 +28,11 @@
   & .calc-size__button {
     display: none;
   }
+  @media (max-width: 991px) {
+    &__content {
+      width: 105%;
+    }
+  }
+  
 }
 
