--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -1,6 +1,7 @@
 .menu {
   width: 80%;
   margin: 0 auto;
+
   &__items {
     list-style: none;
     display: flex;
@@ -8,13 +9,38 @@
     justify-content: space-between;
     align-items: center;
   }
+
   &__item {
     font-weight: 300;
     text-transform: uppercase;
     font-size: 14px;
+
     & a {
       color: black;
       text-decoration: none;
+    }
+  }
+
+  @media (max-width: 1999px) {
+    &__item {
+      text-align: center;
+
+      & a {
+        font-size: 13px;
+      }
+    }
+  }
+
+  @media (max-width: 767px) {
+    &__items {
+      height: 50px;
+    }
+
+    &__item {
+      display: none;
+      & a {
+
+      }
     }
   }
 }
