--- a/src/sass/blocks/modal.scss
+++ b/src/sass/blocks/modal.scss
@@ -40,4 +40,13 @@
       cursor: pointer;
     }
   }
+  @media (max-width: 576px) {
+    &__wrapper {
+      width: 100%;
+    }
+    &__close {
+    top: -15px;
+    right: -4px;
+    }
+  }
 }
